Prettier code.
